# Todo

./: CMakeLists.txt  Makefile  README.md  declarations.hpp  install.sh  main.cpp  todo
libutils/src/: funcs.hpp
